[package]
name = "rus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = "0.9.0"
aws-config = "0.9.0"
aws-types = "0.9.0"
aws-smithy-client = "0.39.0"
http = "0.2"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
